<resources>
    <string name="app_name">Dreadful</string>

    <!--    textview labels-->
    <string name="player_name">Dreath</string>
    <string name="opponent_name">Dread Prophet</string>
    <string name="health_text">0</string>
    <string name="prompt_view">Dreath makes a move</string>
    <string name="dialogue">I am fear!</string>
    <string name="status_value">30</string>
    <string name="status_name">Mark of Sin</string>
    <string name="status_label">Status</string>
    <string name="skill_label">Skill</string>
    <string name="battle_logs">Battle Logs</string>

    <string name="map_name">Hell</string>
    <string name="time_text">5:03 pm</string>
    <string name="date_text">Thu, Dec 28</string>

    <string name="percentage">0%</string>
    <string name="explored_label">Explored</string>
    <string name="requirements">Requirements: Defeat the gun devil, i really believe you so strong dude!</string>
    <string name="search_result">A dangerous Abyss-level monster has been spotted. Please exercise caution.</string>

    <string name="choose_monster">Select an aberrant creature.</string>


    <!--    button labels-->
    <string name="start_button">Start</string>
    <string name="back_button">Back</string>
    <string name="reset_button">Random</string>

    <string name="classic_button">Hunt</string>
    <string name="test_button">Test</string>
    <string name="quit_button">Quit</string>
    <string name="wiki_button">Wiki</string>


    <!--    checkbox labels-->
    <string name="auto_scroll">Auto</string>

    <!--    progressbar labels-->
    <string name="searching">Hunting for aberrant</string>
</resources>